@@ -3,26 +3,27 @@ package com.springddd.application.service.role;
 import com.springddd.application.service.role.dto.SysRoleMenuView;
 import com.springddd.application.service.role.dto.SysRoleMenuViewMapStruct;
 import com.springddd.infrastructure.persistence.entity.SysRoleMenuEntity;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.data.r2dbc.core.R2dbcEntityTemplate;
 import org.springframework.data.r2dbc.core.ReactiveSelectOperation;
 import org.springframework.data.relational.core.query.Query;
 import reactor.core.publisher.Flux;
 import reactor.test.StepVerifier;
 
+import java.util.Collections;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class SysRoleMenuQueryServiceTest {
 
     @Mock
@@ -32,59 +33,58 @@ class SysRoleMenuQueryServiceTest {
     private SysRoleMenuViewMapStruct sysRoleMenuViewMapStruct;
 
     @Mock
-    private ReactiveSelectOperation.ReactiveSelect<SysRoleMenuEntity> selectOp;
+    private ReactiveSelectOperation.ReactiveSelect<SysRoleMenuEntity> reactiveSelect;
 
-    @Mock
-    private ReactiveSelectOperation.TerminatingSelect<SysRoleMenuEntity> terminatingSelect;
+    private SysRoleMenuQueryService sysRoleMenuQueryService;
 
-    @InjectMocks
-    private SysRoleMenuQueryService service;
+    @BeforeEach
+    void setUp() {
+        sysRoleMenuQueryService = new SysRoleMenuQueryService(r2dbcEntityTemplate, sysRoleMenuViewMapStruct);
+    }
 
     @Test
-    @DisplayName("queryLinkRoleAndMenus 应返回角色菜单关联列表")
-    void queryLinkRoleAndMenus_shouldReturnList() {
+    void queryLinkRoleAndMenus_shouldReturnViews_whenEntitiesExist() {
+        Long roleId = 1L;
         SysRoleMenuEntity entity = new SysRoleMenuEntity();
-        entity.setRoleId(1L);
+        entity.setId(1L);
+        entity.setRoleId(roleId);
         entity.setMenuId(2L);
 
         SysRoleMenuView view = new SysRoleMenuView();
-        view.setRoleId(1L);
+        view.setId(1L);
+        view.setRoleId(roleId);
         view.setMenuId(2L);
 
-        when(r2dbcEntityTemplate.select(SysRoleMenuEntity.class)).thenReturn(selectOp);
-        when(selectOp.matching(any(Query.class))).thenReturn(terminatingSelect);
-        when(terminatingSelect.all()).thenReturn(Flux.just(entity));
-        when(sysRoleMenuViewMapStruct.toViewList(anyList())).thenReturn(List.of(view));
+        when(r2dbcEntityTemplate.select(SysRoleMenuEntity.class)).thenReturn(reactiveSelect);
+        when(reactiveSelect.matching(any(Query.class))).thenReturn(reactiveSelect);
+        when(reactiveSelect.all()).thenReturn(Flux.just(entity));
+        when(sysRoleMenuViewMapStruct.toViewList(any())).thenReturn(Collections.singletonList(view));
 
-        StepVerifier.create(service.queryLinkRoleAndMenus(1L))
-                .assertNext(list -> {
-                    assertThat(list).hasSize(1);
-                    assertThat(list.get(0).getMenuId()).isEqualTo(2L);
-                })
+        StepVerifier.create(sysRoleMenuQueryService.queryLinkRoleAndMenus(roleId))
+                .expectNext(Collections.singletonList(view))
                 .verifyComplete();
     }
 
     @Test
-    @DisplayName("queryLinkRoleAndMenusByMenuId 应返回角色菜单关联列表")
-    void queryLinkRoleAndMenusByMenuId_shouldReturnList() {
+    void queryLinkRoleAndMenusByMenuId_shouldReturnViews_whenEntitiesExist() {
+        Long menuId = 2L;
         SysRoleMenuEntity entity = new SysRoleMenuEntity();
+        entity.setId(1L);
         entity.setRoleId(1L);
-        entity.setMenuId(2L);
+        entity.setMenuId(menuId);
 
         SysRoleMenuView view = new SysRoleMenuView();
+        view.setId(1L);
         view.setRoleId(1L);
-        view.setMenuId(2L);
+        view.setMenuId(menuId);
 
-        when(r2dbcEntityTemplate.select(SysRoleMenuEntity.class)).thenReturn(selectOp);
-        when(selectOp.matching(any(Query.class))).thenReturn(terminatingSelect);
-        when(terminatingSelect.all()).thenReturn(Flux.just(entity));
-        when(sysRoleMenuViewMapStruct.toViewList(anyList())).thenReturn(List.of(view));
+        when(r2dbcEntityTemplate.select(SysRoleMenuEntity.class)).thenReturn(reactiveSelect);
+        when(reactiveSelect.matching(any(Query.class))).thenReturn(reactiveSelect);
+        when(reactiveSelect.all()).thenReturn(Flux.just(entity));
+        when(sysRoleMenuViewMapStruct.toViewList(any())).thenReturn(Collections.singletonList(view));
 
-        StepVerifier.create(service.queryLinkRoleAndMenusByMenuId(2L))
-                .assertNext(list -> {
-                    assertThat(list).hasSize(1);
-                    assertThat(list.get(0).getRoleId()).isEqualTo(1L);
-                })
+        StepVerifier.create(sysRoleMenuQueryService.queryLinkRoleAndMenusByMenuId(menuId))
+                .expectNext(Collections.singletonList(view))
                 .verifyComplete();
     }
 }
